small layout fix for ie

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -200,10 +200,11 @@ body {
 
           figcaption.vote-description {
             @include display-flex;
-            @include flex(0 1 auto);
+            @include flex(1 1 auto);
             align-items: center;
             min-height: 48px;
             padding: 0 0 10px 16px;
+            width: calc(100% - 96px);
           }
         }
       }
