add functionality and refactoring

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,8 +6,9 @@ html
     title Home Task
     link(rel='stylesheet' href='css/main.css')
     
-  body
+  body.app
     include template/sidebar.pug
     include template/main-content.pug
     
+    script(src='js/app.js')
     script(src='js/main.js')
