--- a/src/template/main-content.pug
+++ b/src/template/main-content.pug
@@ -14,7 +14,7 @@ section.main-content
           
   .order-switcher
     p Present in random order
-    input(type='checkbox' name='switch-list-order').switch-list-order
+    input(type='checkbox' name='switch-list-order' checked).switch-list-order
     label(for='switch-list-order')
       
   .main-content-inner  
