--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,21 +10,21 @@
   font-family: 'robotobold';
   font-style: normal;
   font-weight: normal;
-  src: url('/fonts/Roboto-Bold-webfont.woff') format('woff');
+  src: url('../fonts/Roboto-Bold-webfont.woff') format('woff');
 }
 
 @font-face {
   font-family: 'robotomedium';
   font-style: normal;
   font-weight: normal;
-  src: url('/fonts/Roboto-Medium-webfont.woff') format('woff');
+  src: url('../fonts/Roboto-Medium-webfont.woff') format('woff');
 }
 
 @font-face {
   font-family: 'robotoregular';
   font-style: normal;
   font-weight: normal;
-  src: url('/fonts/Roboto-Regular-webfont.woff') format('woff');
+  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
 }
 
 // page styles
@@ -45,6 +45,35 @@ body {
   @include flex(0 1 auto);
   background-color: $sidebar-bg-color;
   color: $sidebar-font-color;
+  transition: width .3s;
+
+  &.hide-sidebar {
+    overflow: hidden;
+    width: 56px;
+
+    .menu {
+      float: none;
+      transform: rotate(90deg);
+
+      &:hover {
+        transform: rotate(0deg);
+      }
+    }
+
+    .main-title {
+      margin: 39px 0 0;
+      transform: rotate(270deg);
+    }
+
+    .add-new-vote,
+    .votes {
+      display: none;
+    }
+
+    & + .main-content {
+      width: calc(100% - 56px - 2*$main-content-margin);
+    }
+  }
 
   .menu {
     border-bottom: solid 2px $menu-icon-color;
@@ -119,30 +148,37 @@ body {
 
     .new-vote-form {
       background: $new-vote-form-bg;
-      padding: 24px 16px;
+      padding: 12px 16px;
       position: relative;
 
       input.vote-picture {
         opacity: 0;
         position: absolute;
         z-index: -1;
+
+        &.form_error + label {
+          box-shadow: 0 0 0 1px red;
+        }
       }
 
       label[for='upload-picture'] {
         background-color: $new-vote-form-label-color;
+        background-position: left top;
+        background-repeat: no-repeat;
+        background-size: cover;
         border: 0;
         border-radius: 100px;
-        color: transparent;
         cursor: pointer;
-        height: 8px;
-        padding: 14px 20px;
+        display: inline-block;
+        float: left;
+        height: 48px;
         transition: background-color .3s, color .3s;
-        width: 8px;
+        width: 48px;
 
         &:hover,
-        &:focus {
+        &:focus,
+        &.focus {
           background-color: darken($new-vote-form-label-color, 5%);
-          color: $sidebar-font-color-inverted;
         }
       }
 
@@ -163,10 +199,15 @@ body {
             z-index: -1;
           }
         }
+
+        &.form_error {
+          box-shadow: 0 0 0 1px red;
+        }
       }
 
       label[for='add-description'] {
         color: $new-vote-form-input-font;
+        display: inline-block;
         font-weight: bold;
         margin: 12px 16px;
 
@@ -237,8 +278,7 @@ body {
           color: $main-content-font-color;
           display: block;
           font-size: 14px;
-          line-height: 3.43;
-          padding-bottom: 1px;
+          padding: 12px 0;
           text-align: center;
           text-decoration: none;
           transition: all .3s;
@@ -250,7 +290,7 @@ body {
             border-bottom: solid 2px $main-content-menu-color;
             color: $main-content-menu-color;
             font-weight: bold;
-            padding-bottom: 0;
+            padding-bottom: 11px;
           }
         }
       }
@@ -464,29 +504,29 @@ body {
 @media (min-width: #{$medium-width + 1px}) {
   .sidebar {
     width: 508px;
-  }
 
-  .main-content {
-    width: calc(100% - #{508px + 2*$main-content-margin});
+    & + .main-content {
+      width: calc(100% - #{508px + 2*$main-content-margin});
+    }
   }
 }
 
 @media (min-width: #{$min-width + 1px}) and (max-width: $medium-width) {
   .sidebar {
     width: 444px;
-  }
 
-  .main-content {
-    width: calc(100% - #{444px + 2*$main-content-margin});
+    & + .main-content {
+      width: calc(100% - #{444px + 2*$main-content-margin});
+    }
   }
 }
 
 @media (max-width: $min-width) {
   .sidebar {
     width: 320px;
-  }
 
-  .main-content {
-    width: calc(100% - #{320px + 2*$main-content-margin});
+    & + .main-content {
+      width: calc(100% - #{320px + 2*$main-content-margin});
+    }
   }
 }
